[package]
name = "arti-ffi"
version = "0.0.1"
edition = "2021"

[lib]
name = "arti_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
arti-client = { version = "0.22.0", features = ["static", "onion-service-client"] }
arti = { version = "1.2.7", features = ["experimental-api", "static"] }
tor-rtcompat = { version = "0.22.0", features = ["static", "native-tls", "tokio"] }
tor-config = "0.22.0"
log = "0.4.20"
anyhow = "1.0.79"
rlimit = "0.10.1"

[build-dependencies]
cbindgen = "0.24.3"
glob = "0.3.1"
